assets/css/sportspress.css
/* SportsPress */

/* Header */
.sp-header {
	position: relative;
	overflow: visible;
}

/* Data Tables */
.sp-scrollable-table-wrapper {
	overflow: auto;
}
.sp-data-table {
	width: 100%;
	position: relative;
}
.sp-data-table thead th {
	white-space: nowrap;
}
.sp-data-table thead .sorting,
.sp-data-table thead .sorting_asc,
.sp-data-table thead .sorting_desc,
.sp-data-table thead .sorting_asc_disabled,
.sp-data-table thead .sorting_desc_disabled {
	cursor: pointer;
}
.sp-data-table .sorting:after,
.sp-data-table .sorting_asc:after,
.sp-data-table .sorting_desc:after {
	font-family: dashicons;
}
.sp-data-table .sorting:after {
	content: "\f156";
	color: transparent;
	position: absolute;
}
.sp-data-table .sorting_asc:after {
	content: "\f142";
	position: absolute;
}
.sp-data-table .sorting_desc:after {
	content: "\f140";
	position: absolute;
}

/* Pagination */
.sp-paginated-table {
	margin-bottom: 0 !important;
}
.sp-pagination {
	margin-top: 0 !important;
	border-top: 0 !important;
}
.sp-pagination tfoot tr td {
	text-align: center;
	cursor: pointer;
}
.sp-pagination tfoot tr td.prev {
	text-align: left;
}
.sp-pagination tfoot tr td.next {
	text-align: right;
}
.sp-pagination tfoot tr td a {
	cursor: inherit;
}
.sp-pagination tfoot tr td.active a {
	opacity: 0.5;
	cursor: default;
}
.sp-pagination tfoot tr td.disabled a {
	opacity: 0;
	cursor: default;
}
.widget .sp-pagination tfoot tr td.prev,
.widget .sp-pagination tfoot tr td.next {
	text-align: center;
}

/* League Table */
.sp-league-table .team-logo {
	vertical-align: middle;
	height: 2.5em;
	width: auto;
}

/* Event Performance */
.sp-event-performance .sub-in,
.sp-event-performance .sub-out {
	cursor: default;
}
.sp-event-performance .sub-in:before,
.sp-event-performance .sub-out:before {
	font-family: dashicons;
}
.sp-event-performance .sub-in:before {
	content: "\f140";
}
.sp-event-performance .sub-out:before {
	content: "\f142";
}

/* Event Calendar */
.sp-event-calendar tbody td, .sp-event-calendar thead th {
	text-align: center;
}
.sp-event-calendar #next {
	text-align: right;
}
.sp-event-calendar #prev {
	text-align: left;
}

/* Event List */
.sp-event-list .column-article {
	white-space: nowrap;
}
.sp-event-list .column-article a .dashicons {
	padding-right: 3px;
}

/* Event Blocks */
.sp-event-blocks thead {
	display: none;
}
.sp-event-blocks .event-date,
.sp-event-blocks .event-time,
.sp-event-blocks .event-results,
.sp-event-blocks .event-title {
	text-align: center;
	display: block;
	margin: 10px 20%;
	padding: 0 20px;
	clear: none;
}
.sp-event-blocks .team-logo {
	width: 20%;
	margin: 10px;
}
.sp-event-blocks .logo-odd {
	float: left;
}
.sp-event-blocks .logo-even {
	float: right;
}
.widget .sp-event-blocks .event-title {
	margin: 10px;
	padding: 0;
}

/* Google Maps */
.sp-google-map {
	height: 320px;
}
.sp-google-map img {
	max-width: none !important;
}
.sp-venue-map {
	margin-bottom: 4em;
}

/* View all */
.sp-view-all-link {
	display: block;
	margin-top: 0.5em;
}

/* Alternate */
.sp-data-table tbody tr.odd,
.sp-data-table tbody tr.alternate,
.sp-calendar tbody td#today {
	background: rgba(0, 0, 0, 0.02);
}

@media only screen and (max-width: 40em) {
	.sp-responsive-table {
		margin-bottom: 0;
	}

	.sp-pinned-table {
		position: absolute;
		left: 0;
		top: 0;
		width: 50%;
		overflow: hidden;
		overflow-x: scroll;
		box-shadow: 0 0 1em rgba(0,0,0,0.5);
	}
	.sp-pinned-table table {
		border-right: none;
		border-left: none;
		width: 100%;
	}
	.sp-pinned-table table th,
	.sp-pinned-table table td {
		white-space: nowrap;
	}
	.sp-pinned-table td:last-child {
		border-bottom: 0;
	}
	
	.sp-responsive-table-wrapper {
		position: relative;
		overflow: hidden;
		background: #fff;
	}
	.sp-responsive-table-wrapper .scrollable {
		margin-left: 50%;
	}
	.sp-responsive-table-wrapper .scrollable {
		overflow: scroll;
		overflow-y: hidden;
	}	
	
	.sp-responsive-table td,
	.sp-responsive-table th {
		position: relative;
		white-space: nowrap;
		overflow: hidden;
	}
	.sp-responsive-table .data-number,
	.sp-responsive-table .data-name,
	.sp-responsive-table .data-rank,
	.sp-responsive-table .data-date,
	.sp-responsive-.sp-pinned-table td {
		display: none;
	}
}

